--- a/app.json
+++ b/app.json
@@ -1,6 +1,9 @@
 {
-  "pages": ["pages/classic/classic"],
+  "pages": [
+    "pages/classic/classic"
+  ],
   "window": {
     "navigationBarTitleText": "Blink"
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
