--- a/app.json
+++ b/app.json
@@ -1,9 +1,8 @@
 {
-  "pages": [
-    "pages/classic/classic"
-  ],
+  "pages": ["pages/classic/classic"],
   "window": {
     "navigationBarTitleText": "Blink"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "requiredBackgroundModes": ["audio"]
 }
